Adds suggestions endpoint for player suggestions
